# CrewResearcher

starter/: README.md  pyproject.toml  report.md
starter/src/starter/: crew.py  main.py
starter/src/starter/config/: agents.yaml  tasks.yaml
