[project]
name = "starter"
version = "0.1.0"
description = "Starter using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
starter = "starter.main:run"
run_crew = "starter.main:run"
train = "starter.main:train"
replay = "starter.main:replay"
test = "starter.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
